API ChangeLog	(see the ChangeLog in each 'apps' directory for
		app specific changes


* Release 1.5.6 *

26-Aug-2003	Troy A. Griffitts <scribe@crosswire.org>
	Packaged up 1.5.6
	Updated CORBA services to expose a little more
		functionality for the OSIS webapp

12-Aug-2003	Troy A. Griffitts <scribe@crosswire.org>
	Added Enciphering code that works with SWBuf
	Fixed appendFormatted to re-init var_args
	Other small fixes to build on Opteron 64-bit

07-Jul-2003	Troy A. Griffitts <scribe@crosswire.org>
	Added enough functionality to remotely install
		into installmgr, but Daniel Glassey needs
		to fix the linux autobuild stuff :)
	Added SWOptionFilter and made most option filters
		extent this class.

26-Jun-2003	Troy A. Griffitts <scribe@crosswire.org>
	Removed all std::string references from API and
		mostly replaced with SWBuf
	Added int max param to SWBuf::append
	Added some file copy functions to FileMgr
	Moved some more install stuff to installmgr

18-Jun-2003	Troy A. Griffitts <scribe@crosswire.org>
	Joachim added OSISFootnotes.  Added entryAttributes
		parsing in OSISFootnotes
	Added = operator and empty constructor to XMLTag
	Fixed OSISHeadings to passthru non x-preverse note
		bodies

10-Jun-2003	Troy A. Griffitts <scribe@crosswire.org>
	Added tests/testsuite for building a good set
		of regression tests
	Fixed VerseKey parsing of "1. book" and osisRefs

06-Jun-2003     Joachim Ansorg <junkmail@joachim.ansorgs.de>
	Implemented encodeURL() function in utilweb.cpp
	Converted ThMLHTML filter to XMLTag, removed handling
		of scripRefs because this shouldn't be done
		in FMT_HTML
	Converted ThMLHTMLHREF to XMLTag. Fixed some things.
	Simplified some small things in filters, nothing big.

01-Jun-2003     Joachim Ansorg <junkmail@joachim.ansorgs.de>
	Added WEBIF filters, based on HTMLHREF filters.
	Added new utilweb stuff for working with urls etc.
	Fixed SWORD_NAMESPACE_START and SWORD_NAMESPACE_END
		in defs.h if NO_SWORD_NAMESPACE was defined
